src/test/ui/object-safety-sized.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-sized.rs:18:1
   |
18 | fn make_bar<T:Bar>(t: &T) -> &Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0038"
